[backups2datalad] Update embargo status

--- a/.datalad/config
+++ b/.datalad/config
@@ -1,4 +1,4 @@
 [datalad "dataset"]
 	id = 45351dab-f9dc-4a27-8109-fce3d948b90e
 [dandi "dandiset"]
-	embargo-status = EMBARGOED
+	embargo-status = OPEN
