--- a/dandiset.yaml
+++ b/dandiset.yaml
@@ -32,8 +32,8 @@ assetsSummary:
   - Position
   - ProcessingModule
   - CompassDirection
-citation: Haesemeyer, Martin (2024) Thermal Plaid Experiments (Version draft) [Data
-  set]. DANDI archive. https://dandiarchive.org/dandiset/000485/draft
+citation: Haesemeyer, Martin (2024) Thermal Plaid Experiments (Version 0.241014.2127)
+  [Data set]. DANDI archive. https://doi.org/10.48324/dandi.000485/0.241014.2127
 contributor:
 - awardNumber: 5 R01 NS 123887-02
   name: National Institutes of Health (NIH)
@@ -51,14 +51,15 @@ dateCreated: '2023-04-20T20:32:52.514093+00:00'
 datePublished: '2024-10-14T21:27:54.955892+00:00'
 description: Larval zebrafish navigating a virtual thermal plaid created by an infrared
   stimulus laser
+doi: 10.48324/dandi.000485/0.241014.2127
 ethicsApproval: []
-id: DANDI:000485/draft
+id: DANDI:000485/0.241014.2127
 identifier: DANDI:000485
 keywords: []
 license:
 - spdx:CC-BY-4.0
 manifestLocation:
-- https://api.dandiarchive.org/api/dandisets/000485/versions/draft/assets/
+- https://dandiarchive.s3.amazonaws.com/dandisets/000485/0.241014.2127/assets.yaml
 name: Thermal Plaid Experiments
 protocol: []
 publishedBy:
@@ -78,6 +79,6 @@ repository: https://dandiarchive.org
 schemaKey: Dandiset
 schemaVersion: 0.6.4
 studyTarget: []
-url: https://dandiarchive.org/dandiset/000485/draft
-version: draft
+url: https://dandiarchive.org/dandiset/000485/0.241014.2127
+version: 0.241014.2127
 wasGeneratedBy: []
